--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	</head>
 
 	<body>
-        <form action ="">
+        <form action ="https://api.sheetmonkey.io/form/kHHnKDHwPEqF4HUmqe1qmz" method="post">
         <!--Text-->
             <label for="artistfname">First name:</label><br>
             <input type="text" id="artistfname" name="artistfname"><br>
